# protobuf-ipc-example

./: .ycm_extra_conf.py  CMakeLists.txt  Dockerfile  README.md  main.py  run_check.sh  run_docker.sh
.github/workflows/: format-lint-unittest.yaml
protobuf/: msg.proto
src/: client.cpp  main.cpp  server.cpp
src/first_module/: first_module.cpp
tests/: test_second_module.cpp
